--- a/authService/Dockerfile
+++ b/authService/Dockerfile
@@ -11,8 +11,8 @@ ARG NODE_VERSION=20.16.0
 FROM node:${NODE_VERSION}-alpine
 
 # Use production node environment by default.
-ENV NODE_ENV production
-
+ENV NODE_ENV=production
+ENV JWT_SECRETE=ValidTestStringRandom
 
 WORKDIR /usr/src/app
 
@@ -29,10 +29,10 @@ RUN --mount=type=bind,source=package.json,target=package.json \
 USER node
 
 # Copy the rest of the source files into the image.
-COPY . .
+COPY --chown=node:node . .
 
 # Expose the port that the application listens on.
-EXPOSE 3002
+EXPOSE 3001
 
 # Run the application.
-CMD npm run start
+CMD ["node","App.js"]
