--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,52 @@
 version: '3.7'
 
 services:
+  client-react-nginx:
+    image: front-end:latest
+    build:
+      context: ./frontEnd/
+      dockerfile: Dockerfile
+    init: true
+    networks:
+      - frontend
+    ports:
+      - 8080:8080
+    restart: unless-stopped
+  api-auth:
+    image: auth-service:latest
+    build:
+      context: ./authService
+      dockerfile: Dockerfile
+    init: true
+    depends_on:
+      - db
+    environment:
+      - DB_URL=mongodb://root:password@db:27017/
+    networks:
+      - frontend
+      - backend
+    ports:
+      - 3001:3001
+    restart: unless-stopped
+  api-post:
+    image: post-service:0
+    build:
+      context: ./postService/
+      dockerfile: Dockerfile
+    init: true
+    depends_on:
+      - db
+    environment:
+      - DB_URL=mongodb://root:password@db:27017/
+      - AUTH_SERVER=api-auth
+    networks:
+      - frontend
+      - backend
+    ports:
+      - 3002:3002
+    restart: unless-stopped
 
-  swarm-mongo-db:
+  db:
     image: mongo
     networks:
       - backend
@@ -14,23 +58,8 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: password
-
-  # swarm-mongo-express:
-  #   image: mongo-express
-  #   depends_on:
-  #     - swarm-mongo-db
-  #   networks:
-  #     - backend
-  #   restart: always
-  #   ports:
-  #     - 8081:8081
-  #   environment:
-  #     ME_CONFIG_MONGODB_ADMINUSERNAME: root
-  #     ME_CONFIG_MONGODB_ADMINPASSWORD: password
-  #     ME_CONFIG_MONGODB_URL: mongodb://root:password@mongo:27017/
-  #     ME_CONFIG_BASICAUTH: false
-  #     ME_CONFIG_MONGODB_SERVER: swarm-mongo-db
-
+  
+    
 volumes:
   dbdata:
     driver: local
