--- a/docker-swarm.yaml
+++ b/docker-swarm.yaml
@@ -2,23 +2,22 @@ version: '3.7'
 
 services:
   client-react-nginx:
-    image: front-end:latest
-    build:
-      context: ./frontEnd/
-      dockerfile: Dockerfile
-      args:
-        - EC2_PUBLIC_IP=localhost
+    image: nelsonct7/front-end-service:latest
     init: true
     networks:
       - frontend
     ports:
-      - 8080:8080
-    restart: unless-stopped
+      - target: 8080
+        published: 8080
+        protocol: tcp
+        mode: host
+    deploy:
+      replicas: 1
+      placement:
+        constraints:
+          - node.role == manager
   api-auth:
-    image: auth-service:latest
-    build:
-      context: ./authService
-      dockerfile: Dockerfile
+    image: nelsonct7/auth-service:latest
     init: true
     depends_on:
       - db
@@ -28,13 +27,14 @@ services:
       - frontend
       - backend
     ports:
-      - 3001:3001
-    restart: unless-stopped
+      - target: 3001
+        published: 3001
+        protocol: tcp
+        mode: host
+    deploy:
+      replicas: 2
   api-post:
-    image: post-service:0
-    build:
-      context: ./postService/
-      dockerfile: Dockerfile
+    image: nelsonct7/post-service:latest
     init: true
     depends_on:
       - db
@@ -46,8 +46,12 @@ services:
       - frontend
       - backend
     ports:
-      - 3002:3002
-    restart: unless-stopped
+      - target: 3002
+        published: 3002
+        protocol: tcp
+        mode: host
+    deploy:
+      replicas: 1
 
   db:
     image: mongo
@@ -55,13 +59,13 @@ services:
       - backend
     volumes:
       - dbdata:/data/db
-    restart: always
     ports:
       - 27017:27017
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: password
-  
+    deploy:
+      replicas: 1
     
 volumes:
   dbdata:
