--- a/frontEnd/Dockerfile
+++ b/frontEnd/Dockerfile
@@ -11,6 +11,8 @@ RUN --mount=type=cache,target=/user/src/app/.npm \
 
 COPY . .
 
+ENV NODE_ENV=production
+
 RUN npm run build
 
 FROM nginxinc/nginx-unprivileged:1.23-alpine-perl
