--- a/frontEnd/nginx.config
+++ b/frontEnd/nginx.config
@@ -9,23 +9,15 @@ server {
         add_header 'Content-Type' 'text/plain';
         return 200 "pong";
   }
-  location /api/post/ {
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Server $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_http_version 1.1;
-
-        set $api_post_upstream http://api-post:3002/;
-        proxy_pass $api_post_upstream;
+  location /api/auth {
+        proxy_pass http://api-auth:3001;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
   }
-  location /api/auth/ {
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Server $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_http_version 1.1;
-
-        set $api_auth_upstream http://api-auth:3001/;
-        proxy_pass $api_auth_upstream;
+  location /api/posts {
+        proxy_pass http://api-post:3002;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
   }
   location / {
     root /usr/share/nginx/html;
