--- a/frontEnd/nginx.config
+++ b/frontEnd/nginx.config
@@ -9,13 +9,13 @@ server {
         add_header 'Content-Type' 'text/plain';
         return 200 "pong";
   }
-  location /api/auth {
-        proxy_pass http://api-auth:3001;
+  location /auth-api {
+        proxy_pass http://my-three-tier-app_api-auth:3001;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
   }
-  location /api/posts {
-        proxy_pass http://api-post:3002;
+  location /post-api {
+        proxy_pass http://my-three-tier-app_api-post:3002/api;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
   }
