--- a/frontEnd/nginx.config
+++ b/frontEnd/nginx.config
@@ -10,12 +10,12 @@ server {
         return 200 "pong";
   }
   location /auth-api {
-        proxy_pass http://my-three-tier-app_api-auth:3001;
+        proxy_pass http://api-auth:3001;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
   }
   location /post-api {
-        proxy_pass http://my-three-tier-app_api-post:3002/api;
+        proxy_pass http://api-post:3002/api;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
   }
