--- a/frontEnd/nginx.config
+++ b/frontEnd/nginx.config
@@ -9,15 +9,49 @@ server {
         add_header 'Content-Type' 'text/plain';
         return 200 "pong";
   }
+
   location /auth-api {
-        proxy_pass http://api-auth:3001;
+        # Use the service name from Docker Swarm
+        proxy_pass http://my-three-tier-app_api-auth:3001;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        
+        # Add CORS headers
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+        add_header 'Access-Control-Allow-Headers' '*';
+        
+        # Handle OPTIONS method
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Headers' '*';
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
   }
+
   location /post-api {
-        proxy_pass http://api-post:3002/api;
+        # Use the service name from Docker Swarm
+        proxy_pass http://my-three-tier-app_api-post:3002/api;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        
+        # Add CORS headers
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+        add_header 'Access-Control-Allow-Headers' '*';
+        
+        # Handle OPTIONS method
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Headers' '*';
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
   }
   location / {
     root /usr/share/nginx/html;
