ngnx config change

--- a/frontEnd/nginx.config
+++ b/frontEnd/nginx.config
@@ -12,7 +12,7 @@ server {
 
   location /auth-api {
         # Use the service name from Docker Swarm
-        proxy_pass http://my-three-tier-app_api-auth:3001;
+        proxy_pass http://98.84.133.3:3001/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         
@@ -34,7 +34,7 @@ server {
 
   location /post-api {
         # Use the service name from Docker Swarm
-        proxy_pass http://my-three-tier-app_api-post:3002/api;
+        proxy_pass http://98.84.133.3:3002/api;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         
